app/globals.css
@import "tailwindcss";

/* global styles here */
:root {
  /* added to make focus styles for close and pre/next buttons match */
  --yarl__button_margin: 0;
  --yarl__button_padding: 1rem;
  --yarl__toolbar_padding: 1rem;
}

@layer base {
  body {
    @apply text-gray-700;
    @apply text-[18.7px];
  }

  h1 {
    @apply text-3xl font-normal mb-4;
  }

  h2 {
    @apply text-2xl font-normal mb-4 mt-4;
  }

  h3 {
    @apply text-xl font-normal mb-4 mt-4;
  }

  p {
    @apply mb-4;
  }

  a {
    @apply text-[#f96302] hover:underline;
    @apply font-bold;
  }

  ol {
    @apply list-decimal pl-8 mb-4;
  }

  ul {
    @apply list-disc pl-8 mb-4;
  }

  /* better sitewide visual a11y tabbing */
  /* match inline classes added to grid images in ImageSlider component */
  button,
  a,
  input,
  select,
  textarea {
    @apply focus:outline-blue-500;
  }

  table {
    @apply mt-8 table-auto w-full border-collapse;
  }

  table th {
    @apply font-normal text-left;
  }

  table td {
    @apply px-4 py-2 border-solid border border-gray-300;
  }
}

@layer utilities {
  .yarl__root {
    /* Use the @apply function to reference a specific color */
    --yarl__color_button_active: theme('colors.orange.400');
  }

  .yarl__toolbar {
    /* added to make focus visually match prev and next buttons */
    padding: 0;
  }

  .yarl__button {
    @apply rounded-md; /* matches ImageSlider grid radius */
  }
}

/* Override outside layers because these styles are set inline by yet-another-react-lightbox */
.yarl__root .yarl__navigation_prev,
.yarl__root .yarl__navigation_next {
  padding: var(--yarl__toolbar_padding);
  margin: var(--yarl__toolbar_padding);
}
.yarl__button:focus,
.yarl__button:focus-visible {
  outline: 2px solid #2b7fff;
}

